--- a/work/experimental-design.html
+++ b/work/experimental-design.html
@@ -27,7 +27,7 @@
     <div class="w-container">
       <div class="w-row">
         <div class="article-body-column w-col">
-          <h1 class="article-heading">Other Design Adventures</h1><img src="../images/Octogon-Box.jpg" srcset="../images/Octogon-Box.jpg 500w, ../images/Octogon-Box.jpg 800w, ../images/Octogon-Box.jpg 1080w, ../images/Octogon-Box.jpg 1290w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt=""><br><br>
+          <h1 class="article-heading">Experimental Design</h1><img src="../images/Octogon-Box.jpg" srcset="../images/Octogon-Box.jpg 500w, ../images/Octogon-Box.jpg 800w, ../images/Octogon-Box.jpg 1080w, ../images/Octogon-Box.jpg 1290w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt=""><br><br>
           <div class="w-row">
             <div class="w-col w-col-3"><img src="../images/20190303_180823.jpg" srcset="../images/20190303_180823.jpg 500w, ../images/20190303_180823.jpg 1080w, ../images/20190303_180823.jpg 1600w, ../images/20190303_180823.jpg 2000w, ../images/20190303_180823.jpg 2600w, ../images/20190303_180823.jpg 3200w, ../images/20190303_180823.jpg 4032w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 159.546875px, 206.65625px" alt=""></div>
             <div class="w-col w-col-3"><img src="../images/20190303_180902.jpg" srcset="../images/20190303_180902.jpg 1080w, ../images/20190303_180902.jpg 1600w, ../images/20190303_180902.jpg 2000w, ../images/20190303_180902.jpg 2600w, ../images/20190303_180902.jpg 3200w, ../images/20190303_180902.jpg 4032w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 159.546875px, 206.65625px" alt=""></div>
