--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
           <h2 class="thumbnail-title">User Experience Design</h2>
-          <p>I designed this logo as well as the prototype ideas for the different logo in Illustrator for The Sweetheart Ball. Once the customer chose a logo we created an invitation set for the event and had it sent out to be done in Thermography with white ink, Letterpressed in plum and had plum edge painting.<br>
+          <p>This was an invitation set created with custom logo and artwork..<br>
           </p>
         </section>
       </a>
@@ -48,7 +48,7 @@
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
           <h2 class="thumbnail-title">Invitation Design</h2>
-          <p>I currently work at a stationery shop so we regularly create invitation designs. I also am in charge of creating custom designs when needed.</p>
+          <p>I currently work at a stationery shop where we regularly create invitation designs. I also am in charge of creating custom designs when needed.</p>
         </section>
       </a>
       <a href="work/experimental-design.html" class="article w-inline-block w-clearfix">
@@ -56,7 +56,7 @@
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
           <h2 class="thumbnail-title">Experimental Design</h2>
-          <p>This section includes design work ranging from new Graphic Designs, Screen Prints, and 3D  Design. My passion for design keeps me engaged with modern design techniques. </p>
+          <p>This includes design work ranging from new Graphic Designs, Screen Prints, and 3D Design. </p>
         </section>
       </a>
       <a href="work/laser-work.html" class="article w-inline-block w-clearfix">
