--- a/work/ux-ui-design-process.html
+++ b/work/ux-ui-design-process.html
@@ -27,6 +27,8 @@
     <div class="w-container">
       <div class="w-row">
         <div class="article-body-column w-col">
+		  <button class="collapsible">Open Collapsible</button>
+		    <div class="content">
           <h1 class="article-heading">User Experience Design </h1>
           <p class="subtitle">Recently I have been exploring design methodologies for different designs I work on. Here are a few sketches of my design process. For this project, I was tasked with assisting in creating designs and invitations for Sweetheart Ball for the past few years. This is a set we did a few years ago which had the most amount of work to be created and processes done. </p>
           <h1>Understand </h1>
@@ -50,6 +52,7 @@
 		  <p>Once all the designs were finalized, they were sent out to a vendor to be white engraved and purple letterpressed with plum edge painting on a silver card. The reply card and after party card were also the same way. The envelopes were white engraved with plum liner.</p><br><br>
 		  <img src="../images/SHB2015.jpg" srcset="../images/SHB2015-p-500.jpg 500w, ../images/SHB2015-p-800.jpg 800w, ../images/SHB2015-p-1080.jpg 1080w" alt="">
         </div>
+	  </div>
     </div>
   </div>
   <div class="content-section footer">
