--- a/work/ux-ui-design-process.html
+++ b/work/ux-ui-design-process.html
@@ -27,8 +27,9 @@
     <div class="w-container">
       <div class="w-row">
         <div class="article-body-column w-col">
-		  <button class="collapsible">Open Collapsible</button>
-		    <div class="content">
+			<button class="accordion">Section 1</button>
+			<div class="panel">
+  			<p>Lorem ipsum...</p>	
           <h1 class="article-heading">User Experience Design </h1>
           <p class="subtitle">Recently I have been exploring design methodologies for different designs I work on. Here are a few sketches of my design process. For this project, I was tasked with assisting in creating designs and invitations for Sweetheart Ball for the past few years. This is a set we did a few years ago which had the most amount of work to be created and processes done. </p>
           <h1>Understand </h1>
