--- a/work/ux-ui-design-process.html
+++ b/work/ux-ui-design-process.html
@@ -27,10 +27,10 @@
     <div class="w-container">
       <div class="w-row">
         <div class="article-body-column w-col">
-			<button class="accordion">Section 1</button>
-			<div class="panel">
-  			<p>Lorem ipsum...</p>	
-          <h1 class="article-heading">User Experience Design </h1>
+			<h1 class="article-heading">User Experience Design </h1>
+			<button class="accordion">Sweetheart Ball Design</button>
+			<div class="panel">	
+          <h1 class="article-heading">Sweetheart Ball Design </h1>
           <p class="subtitle">Recently I have been exploring design methodologies for different designs I work on. Here are a few sketches of my design process. For this project, I was tasked with assisting in creating designs and invitations for Sweetheart Ball for the past few years. This is a set we did a few years ago which had the most amount of work to be created and processes done. </p>
           <h1>Understand </h1>
           <p>First I needed to not only analyzed Sweetheart Ball's needs, but also why their theme was chosen. </p>
@@ -52,7 +52,18 @@
           <img src="../images/0114a.jpg" srcset="../images/0114a-p-500.jpeg 500w, ../images/0114a-p-800.jpeg 800w, ../images/0114a-p-1080.jpeg 1080w" alt=""><br><br>
 		  <p>Once all the designs were finalized, they were sent out to a vendor to be white engraved and purple letterpressed with plum edge painting on a silver card. The reply card and after party card were also the same way. The envelopes were white engraved with plum liner.</p><br><br>
 		  <img src="../images/SHB2015.jpg" srcset="../images/SHB2015-p-500.jpg 500w, ../images/SHB2015-p-800.jpg 800w, ../images/SHB2015-p-1080.jpg 1080w" alt="">
+		  <button class="accordion">App Design</button>
+			<div class="panel">	
+          <h1 class="article-heading">App Design </h1>
+          <p class="subtitle">Recently I took a class on Interaction Design and learned about the processes and techniques used in this aspect of design, and opened my eyes to a new project world.</p>
+          <h1>Understand</h1>
+			<p>I was unsure at the time of what I wanted to design for this project. After talking to friends and going through pages of ideas anf thoughts, I settled on a niche app which would have a direct target audience but also reach a large amount of people. My app idea is an app which would consolidate the searching of trading card game (TCG) cards.</p>
+		  <h1>Research</h1>
+			<p>Currently, the biggest site for the majority of TCG cards is a site called TCGPlayer. Besides this site, players can also find cards on ebay or possibly even Amazon. Besides buying singles from these sites, players can also buy singles from vendors at large tournaments or obtain them through buying packs and hoping for the cards they want. Although most people do buy from TCGPlayer, there is still a large number of people who search through multiple sites for the best prices. In my app users would be able to search for cards, view and purchase cards from multiple sites and find the best prices.</p>
+		  <h1>Design</h1>
+			<p>I based my design on the look and feel of the TCGPlayer design and added a custom logo and a simple bottom based menu bar.</p>
         </div>
+	   </div>
 	  </div>
     </div>
   </div>
