--- a/work/ux-ui-design-process.html
+++ b/work/ux-ui-design-process.html
@@ -51,7 +51,7 @@
 		  <p> These are the designs for the reply envelope and invitation envelope</p><br><br>
           <img src="../images/0114a.jpg" srcset="../images/0114a-p-500.jpeg 500w, ../images/0114a-p-800.jpeg 800w, ../images/0114a-p-1080.jpeg 1080w" alt=""><br><br>
 		  <p>Once all the designs were finalized, they were sent out to a vendor to be white engraved and purple letterpressed with plum edge painting on a silver card. The reply card and after party card were also the same way. The envelopes were white engraved with plum liner.</p><br><br>
-		  <img src="../images/SHB2015.jpg" srcset="../images/SHB2015-p-500.jpg 500w, ../images/SHB2015-p-800.jpg 800w, ../images/SHB2015-p-1080.jpg 1080w" alt="">
+		  <img src="../images/SHB2015.jpg" srcset="../images/SHB2015-p-500.jpg 500w, ../images/SHB2015-p-800.jpg 800w, ../images/SHB2015-p-1080.jpg 1080w" alt=""><br><br>
 		  <button class="accordion">App Design</button>
 			<div class="panel">	
           <h1 class="article-heading">App Design </h1>
