--- a/work/ux-ui-design-process.html
+++ b/work/ux-ui-design-process.html
@@ -28,8 +28,11 @@
       <div class="w-row">
         <div class="article-body-column w-col">
 			<h1 class="article-heading">User Experience Design </h1>
-			<button class="accordion">Sweetheart Ball Design</button>
-			<div class="panel">	
+			<div class="accordion js-accordion">
+			 <div class="accordion__item js-accordion-item">
+			  <div class="accordion-header js-accordion-header">Sweetheart Ball Design</div> 
+			   <div class="accordion-body js-accordion-body">
+				<div class="accordion-body__contents">
           <h1 class="article-heading">Sweetheart Ball Design </h1>
           <p class="subtitle">Recently I have been exploring design methodologies for different designs I work on. Here are a few sketches of my design process. For this project, I was tasked with assisting in creating designs and invitations for Sweetheart Ball for the past few years. This is a set we did a few years ago which had the most amount of work to be created and processes done. </p>
           <h1>Understand </h1>
@@ -52,8 +55,13 @@
           <img src="../images/0114a.jpg" srcset="../images/0114a-p-500.jpeg 500w, ../images/0114a-p-800.jpeg 800w, ../images/0114a-p-1080.jpeg 1080w" alt=""><br><br>
 		  <p>Once all the designs were finalized, they were sent out to a vendor to be white engraved and purple letterpressed with plum edge painting on a silver card. The reply card and after party card were also the same way. The envelopes were white engraved with plum liner.</p><br><br>
 		  <img src="../images/SHB2015.jpg" srcset="../images/SHB2015-p-500.jpg 500w, ../images/SHB2015-p-800.jpg 800w, ../images/SHB2015-p-1080.jpg 1080w" alt=""><br><br>
-		  <button class="accordion">App Design</button>
-			<div class="panel">	
+		     </div>
+    </div><!-- end of accordion body -->
+  </div><!-- end of accordion item -->
+		 <div class="accordion__item js-accordion-item active">
+    <div class="accordion-header js-accordion-header">App Design</div> 
+  <div class="accordion-body js-accordion-body">
+    <div class="accordion-body__contents">
           <h1 class="article-heading">App Design </h1>
           <p class="subtitle">Recently I took a class on Interaction Design and learned about the processes and techniques used in this aspect of design, and opened my eyes to a new project world.</p>
           <h1>Understand</h1>
@@ -63,10 +71,12 @@
 		  <h1>Design</h1>
 			<p>I based my design on the look and feel of the TCGPlayer design and added a custom logo and a simple bottom based menu bar.</p>
         </div>
-	   </div>
-	  </div>
     </div>
-  </div>
+    </div><!-- end of accordion body -->
+  </div><!-- end of accordion item -->
+    </div><!-- end of accordion body -->
+  </div><!-- end of accordion item -->
+</div><!-- end of accordion -->
   <div class="content-section footer">
     <div class="w-container"><a href="../work/ux-ui-design-process.html" class="footer-link proof">User Experience Design</a><a href="../work/invite-design.html" class="footer-link w--current">Invitation Design</a><a href="../work/experimental-design.html" class="footer-link">Experimental Design</a><a href="../work/laser-work.html" class="footer-link">Laser Work</a></div>
   </div>
