--- a/work/ux-ui-design-process.html
+++ b/work/ux-ui-design-process.html
@@ -70,6 +70,7 @@
 			<p>Currently, the biggest site for the majority of TCG cards is a site called TCGPlayer. Besides this site, players can also find cards on ebay or possibly even Amazon. Besides buying singles from these sites, players can also buy singles from vendors at large tournaments or obtain them through buying packs and hoping for the cards they want. Although most people do buy from TCGPlayer, there is still a large number of people who search through multiple sites for the best prices. In my app users would be able to search for cards, view and purchase cards from multiple sites and find the best prices.</p>
 		  <h1>Design</h1>
 			<p>I based my design on the look and feel of the TCGPlayer design and added a custom logo and a simple bottom based menu bar.</p>
+	    <a href="https://xd.adobe.com/view/91bc31c9-bbc9-4751-70ea-153b6faac018-e78d/"><h2>View my prototype!</h2></a>
         </div>
     </div>
     </div><!-- end of accordion body -->
