--- a/work/ux-ui-design-process.html
+++ b/work/ux-ui-design-process.html
@@ -11,12 +11,18 @@
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/nikki-c.webflow.css" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="../js/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:300,regular,500","Roboto Condensed:300,regular,700","Roboto Slab:300,regular"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="https://y7v4p6k4.ssl.hwcdn.net/placeholder/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <script>
+  $( function() {
+    $( "#accordion" ).accordion();
+  } );
+  </script>
 </head>
 <body>
   <div class="header-image">
@@ -70,7 +76,7 @@
 			<p>Currently, the biggest site for the majority of TCG cards is a site called TCGPlayer. Besides this site, players can also find cards on ebay or possibly even Amazon. Besides buying singles from these sites, players can also buy singles from vendors at large tournaments or obtain them through buying packs and hoping for the cards they want. Although most people do buy from TCGPlayer, there is still a large number of people who search through multiple sites for the best prices. In my app users would be able to search for cards, view and purchase cards from multiple sites and find the best prices.</p>
 		  <h1>Design</h1>
 			<p>I based my design on the look and feel of the TCGPlayer design and added a custom logo and a simple bottom based menu bar.</p>
-	    <a href="https://xd.adobe.com/view/91bc31c9-bbc9-4751-70ea-153b6faac018-e78d/"><h2>View my prototype!</h2></a>
+		 <a href="https://xd.adobe.com/view/91bc31c9-bbc9-4751-70ea-153b6faac018-e78d/"><h2>View my prototype!</h2></a>
         </div>
     </div>
     </div><!-- end of accordion body -->
