--- a/About.html
+++ b/About.html
@@ -42,7 +42,7 @@
       <div class="section">
         <h1 align="center">Nikki Chauhan</h1>
 		<h4 align="center">Well-Rounded Designer with Passion</h4>
-		<p> I am currently an Arts and Technology Junior with a concentration in Design and Production at The University of Texas at Dallas.</p><p>I have a strong passion for design and similar interests. I have dabbled in the art of screen printing as well as laser engraving and cutting. My hobbies bounce around from time to time during the year, currently I enjoy spending time with friends and learning new skills. </p>
+		<p> I am currently an Bachelor of Arts Senior with a concentration in Design and Production at The University of Texas at Dallas.</p><p>I have a strong passion for design and similar interests. I have a strong interest in the art of screen printing and printmaking as well as laser engraving and cutting. My hobbies bounce around from time to time during the year, currently I enjoy spending time with friends and learning new skills. </p>
 		</div>
 		</div>
       </div>
