--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
     <header class="main-column header">
       <h1 class="logo">Who is Nikki?</h1>
       <div class="big-tagline w-hidden-small w-hidden-tiny">Student<br>Designer<br>Dreamer</div>
-      <div class="info-wrapper"><img src="images/yellowshirt.jpg" height="275" rotate alt="">
+		<div class="info-wrapper"><img src="images/Nikki-Photo-Red.jpg" height="275" rotate alt="">
       </div>
       <div class="footer-wrapper w-clearfix"><a href="index.html" class="footer-nav-link w-inline-block"><img src="images/home-icon.svg" alt=""></a><a href="https://www.linkedin.com/in/nchauhan25/" class="footer-nav-link w-inline-block"><img src="images/linkedin-icon.png" alt=""></a>
 <address> <a href="mailto:nikita.chauhan12@yahoo.com" class="footer-nav-link w-inline-block"><img src="images/close-envelope.png" alt="">
@@ -42,13 +42,10 @@
       <div class="section">
         <h1 align="center">Nikki Chauhan</h1>
 		<h4 align="center">Well-Rounded Designer with Passion</h4>
-		<p> I am currently an Bachelor of Arts Senior with a concentration in Design and Production at The University of Texas at Dallas.</p><p>I have a strong passion for design and similar interests. I have a strong interest in the art of screen printing and printmaking as well as laser engraving and cutting. My hobbies bounce around from time to time during the year, currently I enjoy spending time with friends and learning new skills. </p>
+		<p> I am currently a Senior towards a Bachelor of Arts in Arts, Technology, and Emerging Communication - Design and Production with a concentration in Digital Fabrication at The University of Texas at Dallas.</p><p>I have a strong passion for design and similar interests. I have a strong interest in the art of screen printing and printmaking as well as laser engraving and cutting. My hobbies bounce around from time to time during the year, currently I enjoy spending time with friends and learning new skills. </p>
 		</div>
 		</div>
       </div>
-      <div class="section">
-        <h1>What I&#x27;m Currently Up To. . . </h1>
-  </div>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
