--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="all-content w-clearfix">
     <header class="main-column header">
       <h1 class="logo">Nikki Chauhan </h1>
-      <div class="big-tagline w-hidden-small w-hidden-tiny">I&#x27;m a passionate graphic designer interested in working on interdisciplinary design teams.</div><img src="images/Nikki-Photo-A.jpg" height="275" alt="">
+      <div class="big-tagline w-hidden-small w-hidden-tiny">I&#x27;m a passionate designer and digital fabricator, interested in working on interdisciplinary design teams.</div><img src="images/Nikki-Photo-A.jpg" height="275" alt="">
       <div class="info-wrapper"></div>
       <div class="footer-wrapper w-clearfix"><a href="index.html" class="footer-nav-link w-inline-block w--current"><img src="images/home-icon.svg" alt=""></a><a href="https://www.linkedin.com/in/nchauhan25/" class="footer-nav-link w-inline-block"><img src="images/linkedin-icon.png" alt=""></a><address> <a href="mailto:nikita.chauhan12@yahoo.com" class="footer-nav-link w-inline-block"><img src="images/close-envelope.png" alt="">
         </a>
@@ -38,17 +38,17 @@
         <div class="image-wrapper"><img src="images/0114a-logo.jpg" width="109" alt="" class="thumbnail"></div>
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
-          <h2 class="thumbnail-title">User Experience Design</h2>
-          <p>This was an invitation set created with custom logo and artwork..<br>
+          <h2 class="thumbnail-title">Senior Capstone</h2>
+          <p>Senior Capstone project focussing on design and digital fabrication.<br>
           </p>
         </section>
       </a>
       <a href="work/invite-design.html" class="article w-inline-block w-clearfix">
-      <div class="image-wrapper"><img src="images/0918b-01.jpg" width="109" alt="" class="thumbnail"></div>
+      <div class="image-wrapper"><img src="images/0114a-logo.jpg" width="109" alt="" class="thumbnail"></div>
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
-          <h2 class="thumbnail-title">Invitation Design</h2>
-          <p>I currently work at a stationery shop where we regularly create invitation designs. I also am in charge of creating custom designs when needed.</p>
+          <h2 class="thumbnail-title">Logo and Invitation Design</h2>
+          <p>I used to work at a stationery shop where we regularly created invitations and did custom design work.</p>
         </section>
       </a>
       <a href="work/experimental-design.html" class="article w-inline-block w-clearfix">
