--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="all-content w-clearfix">
     <header class="main-column header">
       <h1 class="logo">Nikki Chauhan </h1>
-      <div class="big-tagline w-hidden-small w-hidden-tiny">I&#x27;m a passionate designer and digital fabricator, interested in working on interdisciplinary design teams.</div><img src="images/Nikki-Photo-A.jpg" height="275" alt="">
+      <div class="big-taglineindex w-hidden-small w-hidden-tiny">I&#x27;m a passionate designer and digital fabricator, interested in working on interdisciplinary design teams.</div><img src="images/Nikki-Photo-A.jpg" height="275" alt="">
       <div class="info-wrapper"></div>
       <div class="footer-wrapper w-clearfix"><a href="index.html" class="footer-nav-link w-inline-block w--current"><img src="images/home-icon.svg" alt=""></a><a href="https://www.linkedin.com/in/nchauhan25/" class="footer-nav-link w-inline-block"><img src="images/linkedin-icon.png" alt=""></a><address> <a href="mailto:nikita.chauhan12@yahoo.com" class="footer-nav-link w-inline-block"><img src="images/close-envelope.png" alt="">
         </a>
