--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </nav>
       <a href="work/ux-ui-design-process.html" class="article w-inline-block w-clearfix">
-        <div class="image-wrapper"><img src="images/0114a-logo.jpg" width="109" alt="" class="thumbnail"></div>
+        <div class="image-wrapper"><img src="images/Capstone-01.jpg" width="109" alt="" class="thumbnail"></div>
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
           <h2 class="thumbnail-title">Senior Capstone</h2>
