--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="menu-icon w-icon-nav-menu"></div>
         </div>
       </nav>
-      <a href="work/ux-ui-design-process.html" class="article w-inline-block w-clearfix">
+      <a href="work/capstone.html" class="article w-inline-block w-clearfix">
         <div class="image-wrapper"><img src="images/Capstone-01.jpg" width="109" alt="" class="thumbnail"></div>
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
