--- a/work/capstone.html
+++ b/work/capstone.html
@@ -39,7 +39,8 @@
 		  <h1>Design</h1>
 			<p> In the end I sketched and scrapped designs using Procreate and settled on a basic skeleton designed in Illustrator. </p><br>
 			<img src="../images/CapstoneSketch-01.jpg" height="275" alt="">
-			<p></p>
+			<p>Once I had a basic sketch set up, I duplicated it and hid the previous layer as a back up in case I changed my mind. I then adjusted the stroke to what I wanted and added on pieces that I wanted and scaled each piece in a few layers so there would be a proper offset on each layer. Once the layers were done and I had a final design set, I opened them in a separate file to set up my layers for laser cutting. I had to sort out all of my cuts and differentiate the seperate interior and exterior cut layers by color.</p>	
+			<img src="../images/CapstoneLC-01.jpg" alt="">
 		  <h1>Final Result</h1>
 			<p>Mind of a Day Thinker is a Mixed Media sculpture consisting of laser cut pieces made of Oak wall panels decorated with a resin and yarn. The project and consists of a central piece with accompanying branched pieces.</p>
         </div>
