--- a/work/invite-design.html
+++ b/work/invite-design.html
@@ -29,19 +29,41 @@
         <div class="article-body-column w-col">
           <h1 class="article-heading">Intro to Invitation Design </h1>
           <p class="subtitle">After my start at a stationery company, I began doing many different kinds of stationery and invitations, ranging from just basic invitations to full vector sets which were sent out to be foiled, thermographied or engraved. </p>
-          <img src="../images/0918b-01.jpg" srcset="../images/0918b-01-p-500.jpeg 500w, ../images/0918b-01-p-800.jpeg 800w, ../images/0918b-01-p-1080.jpeg 1080w, ../images/0918b-01.jpg 1538w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt="">
+          <h1 class="article-heading">Sweetheart Ball Design </h1>
+          <p class="subtitle">Recently I have been exploring design methodologies for different designs I work on. Here are a few sketches of my design process. For this project, I was tasked with assisting in creating designs and invitations for Sweetheart Ball for the past few years. This is a set we did a few years ago which had the most amount of work to be created and processes done. </p>
+          <h1>Understand </h1>
+          <p>First I needed to not only analyzed Sweetheart Ball's needs, but also why their theme was chosen. </p>
+          <h1>Research</h1>
+          <p>I cooperated and coordinated with the main heads of the organization on what they were looking for in regards to their look and logo style. They brought in many logo designs and color options and I created the various styles with their chosen fonts and name style.</p>
+          <h1>Design</h1>
+          <img src="../images/1121a.jpg" srcset="../images/1121a-p-500.jpeg 500w, ../images/1121a-p-800.jpeg 800w, ../images/1121a-p-1080.jpeg 1080w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt=""><br><br>
+          <p>I chose to give them many options on how to place the "Club Sweetheart" name as well as all the various logo styles they had brought in and also researched a few art deco styles myself and created many options for them to ponder on. In the end we went with a design which was simple but still had the art deco feel.</p>
+		  <h1>Implement</h1>
+		  <img src="../images/1211aa.jpg" srcset="../images/1211aa-p-500.jpeg 500w, ../images/1211aa-p-800.jpeg 800w, ../images/1211aa-p-1080.jpeg 1080w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt=""><br><br>
+          <p>Once a logo design and font styles were chosen, I proceeded to create a full invitation set which included a reply set and after party cards.</p><br><br>
+		  <img src="../images/1223a.jpg" srcset="../images/1223a-p-500.jpeg 500w, ../images/1223a-p-1080.jpeg 1080w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt=""><br><br>
+          <p>For the after party, they wanted two options for the wording so I created both and afterwards one was chosen. </p><br>
+          <div class="w-row">
+            <div class="w-col w-col-6"><img src="../images/1211aaa.jpg"  alt=""></div>
+            <div class="w-col w-col-6"><img src="../images/1211aaaa.jpg" alt=""></div>
+          </div><br><br>
+		  <p> These are the designs for the reply envelope and invitation envelope</p><br><br>
+          <img src="../images/0114a.jpg" srcset="../images/0114a-p-500.jpeg 500w, ../images/0114a-p-800.jpeg 800w, ../images/0114a-p-1080.jpeg 1080w" alt=""><br><br>
+		  <p>Once all the designs were finalized, they were sent out to a vendor to be white engraved and purple letterpressed with plum edge painting on a silver card. The reply card and after party card were also the same way. The envelopes were white engraved with plum liner.</p><br><br>
+		  <img src="../images/SHB2015.jpg" srcset="../images/SHB2015-p-500.jpg 500w, ../images/SHB2015-p-800.jpg 800w, ../images/SHB2015-p-1080.jpg 1080w" alt=""><br><br>
+          <img src="../images/1009a-ref.jpg" srcset="../images/1009a-ref-p-500.jpg 500w, ../images/1009a-ref-p-800.jpg 800w, ../images/1009a-ref-p-1080.jpeg 1080w, ../images/1009a-ref.jpg 1500w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt="">
+		  <img src="../images/1009a.jpg" srcset="../images/1009-p-500.jpg 500w, ../images/1009a-p-800.jpg 800w, ../images/1009a-p-1080.jpg 1080w, ../images/1009a.jpg 1500w" alt="">
+          <p>The customer wanted to use a design for her invitation so I recreated the lines and box in Illustrator and once the text was approved, I brought it into Illustrator and outlined it. The gold was seperated out and sent to be foil stamped after we printed the red and green layer in house.</p>
+		  <img src="../images/0918b-01.jpg" srcset="../images/0918b-01-p-500.jpeg 500w, ../images/0918b-01-p-800.jpeg 800w, ../images/0918b-01-p-1080.jpeg 1080w, ../images/0918b-01.jpg 1538w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt="">
           <p><br>This was an early job, the customer wanted a custom simple look that went with their event. This invitation, once printed went inside a black flap front fold folder.</p><br>
           <img src="../images/Jainitas-grad-invite.jpg" srcset="../images/Jainitas-grad-invite-p-500.jpeg 500w, ../images/Jainitas-grad-invite-p-800.jpeg 800w, ../images/Jainitas-grad-invite-p-1080.jpeg 1080w, ../images/Jainitas-grad-invite.jpg 1500w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt="">
           <p><br>I did this invitation using InDesign for my sister&#x27;s graduation party. I used the school colors for the color scheme and did a simple yet elegant logo using a logo font and her name.<br><br></p>
-		  <img src="../images/1009a-ref.jpg" srcset="../images/1009a-ref-p-500.jpg 500w, ../images/1009a-ref-p-800.jpg 800w, ../images/1009a-ref-p-1080.jpeg 1080w, ../images/1009a-ref.jpg 1500w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 478.65625px, 619.984375px" alt="">
-		  <img src="../images/1009a.jpg" srcset="../images/1009-p-500.jpg 500w, ../images/1009a-p-800.jpg 800w, ../images/1009a-p-1080.jpg 1080w, ../images/1009a.jpg 1500w" alt="">
-          <p>The customer wanted to use a design for her invitation so I recreated the lines and box in Illustrator and once the text was approved, I brought it into Illustrator and outlined it. The gold was seperated out and sent to be foil stamped after we printed the red and green layer in house.</p>
         </div>
       </div>
     </div>
   </div>
   <div class="content-section footer">
-    <div class="w-container"><a href="../work/ux-ui-design-process.html" class="footer-link">User Experience Design</a><a href="../work/invite-design.html" class="footer-link proof">Invitation Design</a><a href="../work/experimental-design.html" class="footer-link">EXPERIMENTAL Design</a><a href="../work/laser-work.html" class="footer-link">Laser Work</a></div>
+    <div class="w-container"><a href="../work/capstone.html" class="footer-link">Senior Capstone</a><a href="../work/invite-design.html" class="footer-link proof">Invitation Design</a><a href="../work/experimental-design.html" class="footer-link">EXPERIMENTAL Design</a><a href="../work/laser-work.html" class="footer-link">Laser Work</a></div>
   </div>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
