--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="article-text-wrapper w-clearfix">
           <h2 class="arrow">❯</h2>
           <h2 class="thumbnail-title">Senior Capstone</h2>
-          <p>Senior Capstone project focussing on design and digital fabrication.<br>
+          <p>Senior Capstone project focusing on design and digital fabrication.<br>
           </p>
         </section>
       </a>
