--- a/work/capstone.html
+++ b/work/capstone.html
@@ -42,9 +42,9 @@
 			<p>Once I had a basic sketch set up, I duplicated it and hid the previous layer as a backup in case I changed my mind. I then adjusted the stroke to what I wanted and added on pieces that I wanted and scaled each piece in a few layers so there would be a proper offset on each layer. Once the layers were done and I had a final design set, I opened them in a separate file to set up my layers for laser cutting. I had to sort out all of my cuts and differentiate the separate interior and exterior cut layers by color.</p> <br>	
 			<img src="../images/CapstoneLC-01.jpg" alt="" >
 			<img src="../images/CapstoneLC-02.jpg" alt="" >
-			<img src="../images/CapstoneLC-03.jpg" alt="" style="float:left;width:65%;height:auto;">
-			<img src="../images/CapstoneLC-04.jpg" alt="" style="float:right;width:35%;height:auto;">
-		  <h1>Final Result</h1>
+			<img src="../images/CapstoneLC-03.jpg" alt="" style="width:65%;">
+			<img src="../images/CapstoneLC-04.jpg" alt="" style="float: inherit; width:35%;">
+			<h1>Final Result</h1>
 			<p>Mind of a Day Thinker is a Mixed Media sculpture consisting of laser cut pieces made of Oak wall panels decorated with a resin and yarn. The project and consists of a central piece with accompanying hanging pieces which are in the sequence of moon phases. I ultimately decided not to include the backing branches that were originally designed and instead opted for only the hanging moon phases which gave this piece a look which leaned towards a sun-catcher look. Additional thoughts for this piece include spray painting all of the wood to add a color and cover any extraneous residue and marks from the building process.</p>
         </div>
     </div>
