--- a/work/capstone.html
+++ b/work/capstone.html
@@ -45,7 +45,8 @@
 			<img src="../images/CapstoneLC-03.jpg" alt="" style="width:65%;">
 			<img src="../images/CapstoneLC-04.jpg" alt="" style="float: inherit; width:35%;">
 			<h1>Final Result</h1>
-			<p>Mind of a Day Thinker is a Mixed Media sculpture consisting of laser cut pieces made of Oak wall panels decorated with a resin and yarn. The project and consists of a central piece with accompanying hanging pieces which are in the sequence of moon phases. I ultimately decided not to include the backing branches that were originally designed and instead opted for only the hanging moon phases which gave this piece a look which leaned towards a sun-catcher look. Additional thoughts for this piece include spray painting all of the wood to add a color and cover any extraneous residue and marks from the building process as well as incorporating more elements if I am able to.</p>
+			<p>Mind of a Day Thinker is a Mixed Media sculpture consisting of laser cut pieces made of Oak wall panels decorated with a resin and yarn. The project and consists of a central piece with accompanying hanging pieces which are in the sequence of moon phases. I ultimately decided not to include the backing branches that were originally designed and instead opted for only the hanging moon phases which gave this piece a look which leaned towards a sun-catcher look. The addition of the yarn and hooks pertain to my passion for crochet as well as the resin hobby shown by the inclusion of the moon phases. Additional thoughts for this piece include spray painting all of the wood to add a color and cover any extraneous residue and marks from the building process as well as incorporating more elements if I am able to.</p> <br>
+			<img src="../images/FinalCentral.jpg" alt=""> <br> <img src="../images/FinalFull.jpg" alt="">
         </div>
     </div>
   <div class="content-section footer">
